add: ヘッダーの作成

--- a/index.html
+++ b/index.html
@@ -7,12 +7,96 @@
     <title></title>
   </head>
   <body>
-    <header class="header">
+    <header class="header clearfix">
+      <img src="./images/logo.png" class="logo_image" alt="ロゴ">
+      <ul class="top_menu clearfix">
+        <li><a href="index.html">ホーム</a></li>
+        <li><a href="#">事業内容</a></li>
+        <li><a href="#">会社概要</a></li>
+        <li><a href="#">お問い合わせ</a></li>
+      </ul>
     </header>
     <aside class="side_menu">
     </aside>
     <article class="content">
-      <p>test</p>
+
+      <!-- ページ内リンクの勉強 -->
+      <h1>タイトル１</h1>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+
+      <h1><a name="title2">タイトル2</a></h1>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+
+      <h1 id="title3">タイトル3</h1>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+
+      <h1>タイトル4</h1>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+
+      <h1>タイトル5</h1>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p>内容</p>
+      <p><a href="#title2">タイトル２へのリンク</a></p>
+      <p><a href="#title3">タイトル3へのリンク</a></p>
+
+
+      <!-- floatの勉強 -->
+
+      <div class="content_float1 clearfix">
+        <div id="main">メイン</div>
+        <div id="side">サイド</div>
+        <!-- <div id="under"></div> -->
+      </div>
+      <div class="content_float2">
+        コンテンツ２
+      </div>
+
+
+
 
     </article>
     <footer class="footer"></footer>
