html cssの基礎コース終わり

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
           <li><a href="index.html">ホーム</a></li>
           <li><a href="./business.html">事業内容</a></li>
           <li><a href="./company.html">会社概要</a></li>
-          <li><a href="./contact.html">お問い合わせ</a></li>
+          <li class="point"><a href="./contact.html">お問い合わせ</a></li>
         </ul>
       </header>
       <img src="./images/top.png" class="image_area">
@@ -24,7 +24,7 @@
             <ul>
               <li><a href="./business.html">事業内容</a></li>
               <li><a href="./company.html">会社概要</a></li>
-              <li><a href="./contact.html">お問い合わせ</a></li>
+              <li class="point"><a href="./contact.html">お問い合わせ</a></li>
             </ul>
           </nav>
           <p class="banner">
@@ -34,29 +34,7 @@
           </p>
         </aside>
         <article class="content">
-          <h2>新着情報</h2>
-          <div class="news">
-            <ul>
-              <li>Webサイトをリニューアルしました！</li>
-              <li>Webサイトをリニューアルしました！</li>
-              <li>Webサイトをリニューアルしました！</li>
-              <li>Webサイトをリニューアルしました！</li>
-              <li>Webサイトをリニューアルしました！</li>
-              <li>Webサイトをリニューアルしました！</li>
-              <li>Webサイトをリニューアルしました！</li>
-              <li>Webサイトをリニューアルしました！</li>
-              <li>Webサイトをリニューアルしました！</li>
-              <li>Webサイトをリニューアルしました！</li>
-            </ul>
-          </div>
-          <div class="mybanner">
-            <p>
-              <a href="#"><img src="./images/banner02.png" alt=""></a>
-            </p>
-            <p>
-              <a href=""><img src="./images/banner03.png" alt=""></a>
-            </p>
-          </div>
+          <p>contact.htmlです</p>
         </article>
       </div>
       <footer class="footer">
