--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 </td>
               </tr>
             </table>
-            <div class="test">
+            <div class="center">
               <input type="submit" value="送信" class="btn submit_btn">
             </div>
           </form>
