update: formタグの修正

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
           </nav>
         </aside>
         <article class="contact">
-          <form action="post">
+          <form action="" method="post">
             <table>
               <tr>
                 <th class="caption"><label for="name" accesskey="n">お名前</label></th>
@@ -62,7 +62,7 @@
                 </td>
               </tr>
             </table>
-            <div class="test">
+            <div class="center">
               <input type="submit" value="送信" class="btn submit_btn">
             </div>
           </form>
